
Fri Jul 26 11:36:14 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: no magic numbers.
	* tabledefs.h: security action enum.

Fri Jul 26 11:22:52 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* assembly.c: fix possible memory corruption.

Thu Jul 25 13:58:38 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.h, reflection.c: added support for linking resources.
	* verify.c: check we have an updated corlib.

2002-07-25  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_native_wrapper): correctly marshal
	string arrays.
	(mono_marshal_string_array): null terminate unmanaged string arrays.
	(mono_marshal_get_managed_wrapper): print warning for arrays (not implemented)

Wed Jul 24 13:32:36 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c: Type.GetType () can now return also types from the
	calling assembly.

Wed Jul 24 13:04:05 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* loader.h, loader.c: stack walking support.
	* icall.c: implemented GetCurrentMethod, GetExecutingAssembly,
	GetCallingAssembly.

2002-07-24  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c: added optimisations for blittable types 

	* class.c (mono_array_class_get): do not set blittable attribute on arrays
	(mono_class_setup_mono_type): set blittable attribute for single
	and double.

	* marshal.c (mono_string_utf8_to_builder): impl.
	(mono_string_builder_to_utf8): impl.
	(mono_marshal_get_native_wrapper): impl. StringBuilder marshaling

2002-07-23  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_native_wrapper): impl. byref types
	(mono_marshal_get_managed_wrapper): impl. byref types

2002-07-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* icall.c:
	(search_method): don't display debug message. 

2002-07-22  Dietmar Maurer  <dietmar@ximian.com>

	* metadata.c (mono_type_stack_size): removed temporary fix for new gcc

Mon Jul 22 18:17:05 CEST 2002 Paolo Molaro <lupus@ximian.com>
